# health-timer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
launchd/: com.jamesgriz.healthtimer.plist
scripts/: bootstrap-dev.sh  install.sh  uninstall.sh
src/health_timer/: __init__.py  __main__.py  activities.py  config.py  daemon.py  suggester.py  ui.py
src/life_os/: __init__.py  __main__.py  activities.py  claude_cli.py  config.py  daemon.py  migrate.py  rituals.py  scheduler.py  suggester.py  ui.py  vault.py
templates/vault/: CLAUDE.md  README.md
templates/vault/.claude/: CLAUDE.md
templates/vault/.claude/agents/: content-ingestor.md  inbox-triager.md  vault-linter.md
templates/vault/.claude/commands/: capture.md  daily.md  ingest.md  lint-vault.md  new-project.md  process-inbox.md  rebuild-index.md  search.md  shutdown.md  tasks.md  weekly-review.md  zettel.md
templates/vault/.claude/skills/content-distiller/: SKILL.md
templates/vault/.claude/skills/para-classifier/: SKILL.md
templates/vault/.claude/skills/vault-writer/: SKILL.md
templates/vault/.claude/skills/zettel-linker/: SKILL.md
templates/vault/Templates/: area.md  daily.md  ingested.md  project.md  resource.md  zettel.md
templates/vault/_meta/: .gitignore  _master-index.md
tests/: test_activities.py  test_claude_cli.py  test_config.py  test_daemon_loop.py  test_migrate.py  test_rituals.py  test_scheduler.py  test_suggester.py  test_vault.py
